Basic set up of home page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,33 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="reservation.html">Reservation</a></li>
                     </ul>
                 </nav>
             </div>
         </header> 
+        <img src="img/full-resturant copy.jpg" alt="Italian Resturant" />
+        <figcaption>"Great Food, Great Friends, Great Times"</figcaption>
+        <main>
+            <article>
+                <h3>How It All Started</h3>
+                <p>
+                    Nullam tempor mi at libero elementum varius. Sed lobortis lacus feugiat est tristique, nec imperdiet turpis scelerisque. Ut sed urna malesuada, scelerisque dui sit amet, tempus mauris. Integer bibendum egestas urna, a bibendum sem gravida quis. Cras accumsan rhoncus vestibulum. Nam eu blandit leo. Integer at consectetur nunc, et tempus urna. Integer sit amet sollicitudin elit. Donec nec posuere erat. Sed vestibulum nisl neque, vitae tincidunt ex molestie quis. Nulla fringilla viverra turpis in volutpat. Cras vel orci quis velit efficitur ullamcorper sed eu ex.
+                </p>
+            </article>
+        </main>
+        <footer>
+            <h5>Want to know what's going on at Russo's Ristorante?</h5>
+        <summary class="panel panel-default col-md-8 col-md-offset-2">
+            <form>
+                <fieldset>
+                    <legend>Sign up for Weekly E-mails</legend>
+                    First Name: <input name="firstName" type="text" placeholder="Enter your first name" />
+                    Last Name: <input name="lastName" type="text" placeholder="Enter your last name" />
+                    Email Address: <input name="emailAddress" type="email" placeholder="Enter your e-mail address" />
+                </fieldset>
+                <input type="submit" value="Enroll" />
+            </form>
+        </footer>
     </body>
 </html>
