--- a/reservation.html
+++ b/reservation.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Russo's Ristorante-Menu</title>
+        <title>Russo's Ristorante-About</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <h1>Mouth Watering Menu</h1>
-            <h2>Pick from the Very Best </h2>
+            <h1>Want to Reserve a Table?</h1>
+            <h2>You've Come to the Right Place</h2>
             <div class="container">
                 <nav>
                     <ul>
