How it all started <p> updated (commit on 'index.html'

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         <main>
             <article>
                 <h3>How It All Started</h3>
-                <p>
-                    Nullam tempor mi at libero elementum varius. Sed lobortis lacus feugiat est tristique, nec imperdiet turpis scelerisque. Ut sed urna malesuada, scelerisque dui sit amet, tempus mauris. Integer bibendum egestas urna, a bibendum sem gravida quis. Cras accumsan rhoncus vestibulum. Nam eu blandit leo. Integer at consectetur nunc, et tempus urna. Integer sit amet sollicitudin elit. Donec nec posuere erat. Sed vestibulum nisl neque, vitae tincidunt ex molestie quis. Nulla fringilla viverra turpis in volutpat. Cras vel orci quis velit efficitur ullamcorper sed eu ex.
-                </p>
+                <section>
+                    <p>Russo's Ristorante, located in New York City, serves classic and fresh meals that combine the best of traditional Italian recipes with fresh ingredients.</p>
+                    <p>Opened in 1985, Russo's is celebrated as one of the oldest family-owned and operated restaurants running in Midtown Manhattan serving the cherished Italian traditions as it's main ingredients. Russo's menu pairs generations of authenticity and love with freshness and flavor</p>
+                    <p>Sit back, relax and enjoy as we invite you to join us for our brand of Italian hospitality.</p>
+                </section>
             </article>
         </main>
         <footer>
