--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Mouth Watering Menu</h1>
             <h2>Pick from the Very Best </h2>
-            <div class="container">
+            <div>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -54,5 +54,43 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+
+          <!--Food Menu-->
+
+          <div class="tab">
+            <button class="tablinks" onclick="openMenu(event, 'Antipasti')">Antipasti</button>
+            <button class="tablinks" onclick="openMenu(event, 'Il Secondo')">Il Secondo</button>
+            <button class="tablinks" onclick="openMenu(event, 'Dolci')">Dolci</button>
+          </div>
+
+            <div id="Antipasti" class="tabcontent">
+                <h3>Antipasti</h3>
+                <p>Menu Items.</p>
+            </div>
+  
+            <div id="Il Secondo" class="tabcontent">
+                <h3>Il Secondo</h3>
+                <p>Menu Items.</p>
+            </div>
+  
+            <div id="Dolci" class="tabcontent">
+                <h3>Dolci</h3>
+                <p>Menu Items.</p>
+            </div>
+            <script>
+                function openMenu(evt, menuName) {
+                  var i, tabcontent, tablinks;
+                  tabcontent = document.getElementsByClassName("tabcontent");
+                  for (i = 0; i < tabcontent.length; i++) {
+                    tabcontent[i].style.display = "none";
+                  }
+                  tablinks = document.getElementsByClassName("tablinks");
+                  for (i = 0; i < tablinks.length; i++) {
+                    tablinks[i].className = tablinks[i].className.replace(" active", "");
+                  }
+                  document.getElementById(menuName).style.display = "block";
+                  evt.currentTarget.className += " active";
+                }
+                </script>
     </body>
 </html>
