Menu tabs. Added items & images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1>Russo's Ristorante</h1>
+            <h1 id="Russo">Russo's Ristorante</h1>
             <h2>"Best Italian Food in Town!"</h2>
             <div class="container">
                 <nav>
@@ -30,9 +30,11 @@
                 </section>
             </article>
         </main>
+        
+        <!--Email Sign-up in Footer-->
         <footer>
             <h5>Want to know what's going on at Russo's Ristorante?</h5>
-        <summary class="panel panel-default col-md-8 col-md-offset-2">
+            <summary class="panel panel-default col-md-8 col-md-offset-2">
             <form>
                 <fieldset>
                     <legend>Sign up for Weekly E-mails</legend>
@@ -42,6 +44,7 @@
                 </fieldset>
                 <input type="submit" value="Enroll" />
             </form>
+            <a href="#Russo">Back to the Top</a>
         </footer>
     </body>
 </html>
