--- a/reservation.html
+++ b/reservation.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1>Want to Reserve a Table?</h1>
+            <h1 id="Reservations">Want to Reserve a Table?</h1>
             <h2>You've Come to the Right Place</h2>
             <div class="container">
                 <nav>
@@ -18,5 +18,8 @@
                 </nav>
             </div>
         </header>
+        <footer>
+            <a href="#Reservations">Back to the Top</a>
+        </footer>
     </body>
 </html>
