Add basic layout of Reservation column

--- a/reservation.html
+++ b/reservation.html
@@ -18,6 +18,38 @@
                 </nav>
             </div>
         </header>
+        
+        <!--Reservation table-->
+
+        <div id="Reservation" class="reservationContent">
+            <nav>
+                <div class="row">
+                    <div class="column" style="background-color: whitesmoke;">
+                      <h1>Hours</h1>
+                      <h2>Monday to Thursday</h2>
+                      <p>11:00am to 10:00pm</p>
+                      <h2>Friday & Saturday</h2>
+                      <p>11:00am to 11:30pm</p>
+                      <h2>Sunday</h2>
+                      <p>12:00pm to 9:30pm</p>
+                    </div>
+                    <div class="column" style="background-color: whitesmoke;">
+                        <form id="reservationText" class="reservationInput"> 
+                            <fieldset>
+                                First Name: <input name="firstName" type="text" placeholder="Enter your First Name" />
+                                Last Name: <input name="lastName" type="text" placeholder="Enter your Last Name" />
+                                Email Address: <input name="emailAddress" type="email" placeholder="Enter your E-mail Address" />
+                                Number of People: <input name="numberPeople" type="number" placeholder="Number of People" />
+                                Date & Time:
+                            </fieldset>
+                            <input type="submit" value="Book Table" />
+                        </form>
+                    </div>          
+                </div>
+            </nav>
+        </div>
+
+
         <footer>
             <a href="#Reservations">Back to the Top</a>
         </footer>
