Reservation page - hours update

--- a/reservation.html
+++ b/reservation.html
@@ -23,7 +23,7 @@
 
        
         <div class="container">
-            <img src="img/colosseum.jpg" alt="Colosseum" style="width:70%;">
+            <img src="img/colosseum.jpg" alt="Colosseum" width="985px" height="600px">
             <div class="text-hours"> 
                 <h1>Hours</h1>
                 <h2>Monday to Thursday</h2>
